added card in home

--- a/templates/home.html
+++ b/templates/home.html
@@ -281,16 +281,51 @@ function myFunction() {
   <div class="w3-card-4 w3-margin w3-white">
   <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
     <div class="w3-container">
-      <h3><b>BLOG ENTRY</b></h3>
-      <h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
+      <h3><b>UNDERSTANDING AND AVOIDING PLAGIARISM</b></h3>
+      <h5>What is plagiarism? <span class="w3-opacity">April 2, 2014</span></h5>
     </div>
 
     <div class="w3-container">
-      <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
-        tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+      <p>Plagiarism is the use of another person's ideas, procedures, results, or words without giving proper credit, and it is a fundamental violation of the honour code. Caltech's collective purpose is to generate new knowledge through study and writing, and we frequently accomplish this through collaboration.
+        We must be able to believe that when our ideas or words are taken up by another thinker, we will be credited for our contribution to his or her thinking for this process to operate. It is unethical to take advantage of an individual's intellectual labour by failing to credit the author of a piece of writing or an idea.
+        <h2>How do academic writers cite their sources? </h2><span id="dot">...</span><span id="mor">
+Scholarly communities have very specific rules about how attribution works. You should be aware that the particulars of citation vary by discipline and context. Many fields have developed complex systems for this purpose which are presented in published guides, such as <a data-original-title="" href="https://www.mla.org/MLA-Style" target="_blank" title="">Modern Language Association (MLA) style,</a> <a data-original-title="" href="http://www.apastyle.org" target="_blank" title="">American Psychological Association (APA) style</a>, and the <a data-original-title="" href="https://www.councilscienceeditors.org/publications/scientific-style-and-format/" title="">Council of Scientific Editors (CSE) style. </a>Because these systems differ in both major and minor ways and there are dozens of citation systems in common use (and many more in less common use), we cannot present a thorough introduction to them here. We advise writers to seek out guides to citation written about the particular citation style they are using. The essential features of attribution that are present in every system are:
+<ul>
+<br/><li>In-text citation: Any time you borrow language or paraphrase ideas, processes, or results from another text, you must make this clear within your text. This is usually done within the sentence itself, parenthetically, or with a footnote or endnote. Every citation system has a specific format for in-text citation.<br/></li>
+<li>List of references: Every essay or document you produce that contains in-text citations should also have a list of references, in which you present the complete bibliographic information for the cited texts. Again, each citation system handles the particulars differently (including having different names for what this part of a text is called), but it often requires a list of texts that appears at the end of the document.</li>
+</ul>
+The results of properly done in-text citations and a references page are (1) that a reader ALWAYS knows without question or ambiguity which ideas, processes, results, and language were developed by you, and which come from other sources and (2) that a reader can easily locate that original source if they want to know more about your sources. It takes careful notetaking, writing, and revision to accurately complete the citation process. Keep in mind that plagiarism isn&#39;t just about taking sentences from other writers; even if you change all the words by paraphrase, if the idea or finding comes from someone else, you are required to make that clear to your reader.
+<h2>How do I know when to cite and when not to cite?</h2>
+As a student writer, if you are not sure if you are required to cite a source, it is always better to err on the side of caution and cite; academic readers are more tolerant of overcitation than undercitation. However, it&#39;s always ideal to consult your instructor for guidance so you avoid both overcitation and undercitation. 
+<h2>Who can help me avoid plagiarism and cite sources correctly?</h2>
+Your instructor and TAs are great resources for answering questions about what citation system to use and which citation conventions are to be used for a particular assignment.
+If you need help with the implementation of a citation system, you can make an appointment with a writing specialist in the Hixon Writing Center. We&#39;re glad to work with you on the sentence level to help you with this core feature of academic writing.
+For more online resources related to citation, see our <a href="/resources">Resources</a> page. You&#39;ll find links to specific guidelines for working with sources at Caltech as well as links to information about the major scholarly citation systems. For guidance in using a the <a data-original-title="" href="https://libguides.caltech.edu/CitationManagement" title="">citation management system Zotero</a>, contact the Caltech Library. <br/></p>
+<h2>What happens if part or all of an essay I submit to an instructor is plagiarized?</h2>
+As stated above, plagiarism violates Caltech&#39;s honor code. As a result, cases of plagiarism in undergraduate courses are referred to the <a href="http://donut.caltech.edu/ascit/BoC_Reps" target="_blank">Board of Control</a> for review.
+</span></p>
+<button onclick="myFunction()" id="myBtn">Read more</button>
+
+<script>
+function myFunction() {
+var dots = document.getElementById("dot");
+var moreText = document.getElementById("mor");
+var btnText = document.getElementById("myBtn");
+
+if (dots.style.display === "none") {
+dots.style.display = "inline";
+btnText.innerHTML = "Read more"; 
+moreText.style.display = "none";
+} else {
+dots.style.display = "none";
+btnText.innerHTML = "Read less"; 
+moreText.style.display = "inline";
+}
+}
+</script>
       <div class="w3-row">
         <div class="w3-col m8 s12">
-          <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
+          <!-- <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p> -->
         </div>
         <div class="w3-col m4 w3-hide-small">
           <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-badge">2</span></span></p>
