fix for previous commit

--- a/templates/home.html
+++ b/templates/home.html
@@ -304,13 +304,13 @@ For more online resources related to citation, see our <a href="/resources">Reso
 <h2>What happens if part or all of an essay I submit to an instructor is plagiarized?</h2>
 As stated above, plagiarism violates Caltech&#39;s honor code. As a result, cases of plagiarism in undergraduate courses are referred to the <a href="http://donut.caltech.edu/ascit/BoC_Reps" target="_blank">Board of Control</a> for review.
 </span></p>
-<button onclick="myFunction()" id="myBtn">Read more</button>
+<button onclick="myFunction2()" id="myBtn2">Read more</button>
 
 <script>
-function myFunction() {
+function myFunction2() {
 var dots = document.getElementById("dot");
 var moreText = document.getElementById("mor");
-var btnText = document.getElementById("myBtn");
+var btnText = document.getElementById("myBtn2");
 
 if (dots.style.display === "none") {
 dots.style.display = "inline";
