--- a/templates/professor.html
+++ b/templates/professor.html
@@ -6,7 +6,9 @@
   <style>
     body {
       font-family: "Lato", sans-serif;
-    }
+      background-color:#1F2739;
+}
+    
 
     .sidebar {
       height: 100%;
@@ -284,7 +286,7 @@
   </div>
 
   <div class="wrapper">
-    <h1>RESEARCH AREAS</h1>
+    <h1 style="color: antiquewhite;">RESEARCH AREAS</h1>
     <div class="cols">
       <div class="col" ontouchstart="this.classList.toggle('hover');">
         <div class="container">
