--- a/templates/professor.html
+++ b/templates/professor.html
@@ -379,7 +379,7 @@
           </div>
           <div class="back">
             <div class="inner">
-              <a href="https://home.iitd.ac.in/" target="blank">DETAILS</a>
+              <a href="civilstatic.html" target="blank">DETAILS</a>
             </div>
           </div>
         </div>
