--- a/templates/PROFESSORTES.HTML
+++ b/templates/PROFESSORTES.HTML
@@ -269,7 +269,7 @@ body {
     </li>
     <li class="card">
       <img src='https://images.unsplash.com/photo-1581594549595-35f6edc7b762?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80' alt=''>
-      <h3><a href=""><p style="text-align:center">BIOTECHNOLOGY</a></p></h3>
+      <h3><a href="civilstatic.html"><p style="text-align:center">BIOTECHNOLOGY</a></p></h3>
 
     </li>
   </ul>
