--- a/templates/civilstatic.html
+++ b/templates/civilstatic.html
@@ -157,9 +157,9 @@ h2 a {
 .container td:first-child { color: #FB667A; }
 
 .container tr:hover {
-   background-color: #464A52;
+   background-color: #464A52;;
 -webkit-box-shadow: 0 6px 6px -6px #0E1119;
-	   -moz-box-shadow: 0 6px 6px -6px #0E1119;
+	   -moz-box-shadow: 0 6px 6px -6px #0E1119
 	        box-shadow: 0 6px 6px -6px #0E1119;
 }
 
@@ -298,10 +298,10 @@ h2 a {
                 <td>Soil Dynamics and Earthquake Engineering, Pile Foundations, Deep Excavations in Urban Areas, Problematic Soils and Ground Improvement</td>
                 
                 
-                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                 
                 
-                <a href="NA" target="_blank">Publications</a><p></p></div></td></tr>
+                <a href="Errorpage.html" target="_blank">Publications</a><p></p></div></td></tr>
                 <tr><td>Prof. Suresh Bhalla</td>
                 
                 
@@ -330,10 +330,10 @@ h2 a {
                 <td>Durability of Concrete, Rebar Corrosion, Cement Based Composites, Construction Technology, Building Science.</td>
                 
                 
-                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                 
                 
-                <a href="NA" target="_blank">Publications</a><p></p></div></td></tr>
+                <a href="Errorpage.html" target="_blank">Publications</a><p></p></div></td></tr>
                 <tr><td>Prof. Shashank Bishnoi</td>
                 
                 
@@ -394,10 +394,10 @@ h2 a {
                 <td>Geotechnical Engineering, Soil Mechanics, Foundations, Geoenvironment, Landfills, Ash Ponds, Tailings, Ground Improvement, Slope Stability, Dams, Offshore Geotechnology.</td>
                 
                 
-                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                 
                 
-                <a href="NA" target="_blank">Publications</a><p></p></div></td></tr>
+                <a href="Errorpage.html" target="_blank">Publications</a><p></p></div></td></tr>
                 <tr><td>Prof. N.K. Garg</td>
                 
                 
@@ -410,10 +410,10 @@ h2 a {
                 <td>Water Resources Systems, Finite Element Watershed Modelling, Irrigation Management, CAD.</td>
                 
                 
-                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                 
                 
-                <a href="NA" target="_blank">Publications</a><p></p></div></td></tr>
+                <a href="Errorpage.html" target="_blank">Publications</a><p></p></div></td></tr>
                 <tr><td>Prof. A.K. Gosain</td>
                 
                 
@@ -442,10 +442,10 @@ h2 a {
                 <td>Structural Engineering, Artificial Intelligence, Technology Enhanced Learning, Web Based Courses.</td>
                 
                 
-                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                 
                 
-                <a href="NA" target="_blank">Publications</a><p></p></div></td></tr>
+                <a href="Errorpage.html" target="_blank">Publications</a><p></p></div></td></tr>
                 <tr><td>Prof. A.K. Jain</td>
                 
                 
@@ -490,10 +490,10 @@ h2 a {
                 <td>Mass Transit Planning, Traffic Flow Modelling and Traffic Safety.</td>
                 
                 
-                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                 
                 
-                <a href="NA" target="_blank">Publications</a><p></p></div></td></tr>
+                <a href="Errorpage.html" target="_blank">Publications</a><p></p></div></td></tr>
                 <tr><td>Prof. D.R. Kaushal</td>
                 
                 
@@ -506,10 +506,10 @@ h2 a {
                 <td>Hydraulic and Water Resources Engineering, Fluid Mechanics, Sediment Transport, Hydraulic Structures, Multiphase Flows, Slurry Pipeline and Flume, Computational Fluid Dynamics, Flow Instrumentation.</td>
                 
                 
-                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                 
                 
-                <a href="NA" target="_blank">Publications</a><p></p></div></td></tr>
+                <a href="Errorpage.html" target="_blank">Publications</a><p></p></div></td></tr>
                 <tr><td>Prof. A.K. Keshari</td>
                 
                 
@@ -522,10 +522,10 @@ h2 a {
                 <td>Hydrological and Environmental Modelling, Sustainable Development, Remote Sensing and GIS, FEM, Waste Management and Sewerage System, Policy Analysis and Risk Assessment, Snow and Avalanche.</td>
                 
                 
-                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                 
                 
-                <a href="NA" target="_blank">Publications</a><p></p></div></td></tr>
+                <a href="Errorpage.html" target="_blank">Publications</a><p></p></div></td></tr>
                 <tr><td>Prof. Mukesh Khare</td>
                 
                 
@@ -538,10 +538,10 @@ h2 a {
                 <td>Air and Vehicular Pollution Modelling, Indoor Air Pollution.</td>
                 
                 
-                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                 
                 
-                <a href="NA" target="_blank">Publications</a><p></p></div></td></tr>
+                <a href="Errorpage.html" target="_blank">Publications</a><p></p></div></td></tr>
                 <tr><td>Prof. Rakesh Khosa</td>
                 
                 
@@ -570,10 +570,10 @@ h2 a {
                 <td>Human Health Risk Assessment, Nanoparticles, Water Treatment, Uncertainty Analysis.</td>
                 
                 
-                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                 
                 
-                <a href="NA" target="_blank">Publications</a><p></p></div></td></tr>
+                <a href="Errorpage.html" target="_blank">Publications</a><p></p></div></td></tr>
                 <tr><td>Prof. Alok Madan</td>
                 
                 
@@ -618,10 +618,10 @@ h2 a {
                 <td>Groundwater Contamination, Bioremediation of Soils, Flow through Porous Media, Phyto-Remediation, Biodegradation in Landfills.</td>
                 
                 
-                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                 
                 
-                <a href="NA" target="_blank">Publications</a><p></p></div></td></tr>
+                <a href="Errorpage.html" target="_blank">Publications</a><p></p></div></td></tr>
                 <tr><td>Prof. Vasant Matsagar</td>
                 
                 
@@ -714,10 +714,10 @@ h2 a {
                 <td>Transport Planning and Policy, Traffic Safety, Public Transport and NMV Planning.</td>
                 
                 
-                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="NA" target="_blank">Profile</a>
+                <td><div class="dropdown"><button class="dropbtn">Details</button><div class="dropdown-content"><a href="Errorpage.html" target="_blank">Profile</a>
                 
                 
-                <a href="NA" target="_blank">Publications</a><p></p></div></td></tr>
+                <a href="Errorpage.html" target="_blank">Publications</a><p></p></div></td></tr>
 
                 <tr><td>PROF. DEEPANKAR CHOUDHURY</td>
 
