--- a/templates/professor.html
+++ b/templates/professor.html
@@ -389,13 +389,13 @@
           <div class="front"
             style="background-image: url(https://images.unsplash.com/photo-1600363503477-a8d1d6d57dfc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=708&q=80)">
             <div class="inner">
-              <p>MINING</p>
-              <span>MINING</span>
+              <p>Mechanical</p>
+              <span>Mechanical</span>
             </div>
           </div>
           <div class="back">
             <div class="inner">
-              <a href="https://home.iitd.ac.in/" target="blank">DETAILS</a>
+              <a href="mechanicalStat.html" target="blank">DETAILS</a>
             </div>
           </div>
         </div>
