--- a/templates/research.html
+++ b/templates/research.html
@@ -2,157 +2,13 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-}
-
-.sidebar {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
-
-.sidebar a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidebar a:hover {
-  color: #f1f1f1;
-}
-
-.sidebar .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-
-.openbtn {
-  font-size: 20px;
-  cursor: pointer;
-  background-color: #111;
-  color: white;
-  padding: 10px 15px;
-  border: none;
-}
-
-.openbtn:hover {
-  background-color: #444;
-}
-
-div.content {
-  margin-left: 200px;
-  padding: 1px 16px;
-  height: 1000px;
-}
-
-@media screen and (max-width: 700px) {
-  .sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  .sidebar a {float: left;}
-  div.content {margin-left: 0;}
-}
-
-@media screen and (max-width: 400px) {
-  .sidebar a {
-    text-align: center;
-    float: none;
-  }
-}
-
-html {
-  box-sizing: border-box;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-.column {
-  float: left;
-  width: 33.3%;
-  margin-bottom: 16px;
-  padding: 0 8px;
-}
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  margin: 8px;
-}
-
-.about-section {
-  padding: 50px;
-  text-align: center;
-  background-color: #474e5d;
-  color: white;
-}
-
-.container {
-  padding: 0 16px;
-}
-
-.container::after, .row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.title {
-  color: grey;
-}
-
-.button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-}
-
-.button:hover {
-  background-color: #555;
-}
-#main {
-  transition: margin-left .5s;
-  padding: 16px;
-}
-
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidebar {padding-top: 15px;}
-  .sidebar a {font-size: 18px;}
-}
-</style>
+<link rel="stylesheet" href="/stylesheets/research.css">
 </head>
 <body>
-
-
   <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
     <a href="professor.html">Professor</a>
-    <a href="">Home</a>
+    <a href="home.html">Home</a>
     <a href="research.html">Research</a>
     <a href="aboutus.html">AboutUs</a>
   </div>
@@ -178,7 +34,7 @@ html {
       <div class="row">
         <div class="column">
           <div class="card">
-            <img src="/static/document.png" alt="Aditya" style="width:100%">
+            <img src="/images/document.png" alt="Aditya" style="width:100%">
             <div class="container">
               <h2>Name</h2>
               <p class="title">Authors</p>
@@ -191,7 +47,7 @@ html {
       
         <div class="column">
           <div class="card">
-            <img src="/static/document.png" alt="Aditya" style="width:100%">
+            <img src="/images/document.png" alt="Aditya" style="width:100%">
             <div class="container">
               <h2>Name</h2>
               <p class="title">Authors</p>
@@ -204,7 +60,7 @@ html {
       
         <div class="column">
           <div class="card">
-            <img src="/static/document.png" alt="Aditya" style="width:100%">
+            <img src="/images/document.png" alt="Aditya" style="width:100%">
             <div class="container">
               <h2>Name</h2>
               <p class="title">Authors</p>
@@ -217,7 +73,7 @@ html {
       
         <div class="column">
           <div class="card">
-            <img src="/static/document.png" alt="Aditya" style="width:100%">
+            <img src="/images/document.png" alt="Aditya" style="width:100%">
             <div class="container">
               <h2>Name</h2>
               <p class="title">Authors</p>
@@ -229,7 +85,7 @@ html {
         </div>
         <div class="column">
           <div class="card">
-            <img src="/static/document.png" alt="Aditya" style="width:100%">
+            <img src="/images/document.png" alt="Aditya" style="width:100%">
             <div class="container">
               <h2>Name</h2>
               <p class="title">Authors</p>
