Flask Organizational Changes

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/stylesheets/aboutus.css">
+<link rel="stylesheet" href="/static/css/aboutus.css">
 </head>
 <body>
 
@@ -40,7 +40,7 @@
       <div class="row">
         <div class="column">
           <div class="card">
-            <img src="/images/us/aditya.png" alt="Aditya" style="width:100%">
+            <img src="/static/aditya.png" alt="Aditya" style="width:100%">
             <div class="container">
               <h2>Aditya</h2>
               <p class="title">Back-End Devloper</p>
@@ -53,7 +53,7 @@
       
         <div class="column">
           <div class="card">
-            <img src="/images/us/nandini.png" alt="Nanadini" style="width:100%">
+            <img src="/static/nandini.png" alt="Nanadini" style="width:100%">
             <div class="container">
               <h2>Nanadini Singh</h2>
               <p class="title">Front End Devloper</p>
@@ -66,7 +66,7 @@
       
         <div class="column">
           <div class="card">
-            <img src="/images/us/ishank.png" alt="Ishank" style="width:100%">
+            <img src="/static/ishank.png" alt="Ishank" style="width:100%">
             <div class="container">
               <h2>Ishank Giri</h2>
               <p class="title">Designer</p>
@@ -79,7 +79,7 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="/images/us/piyush.png" alt="piyush" style="width:100%">
+          <img src="/static/piyush.png" alt="piyush" style="width:100%">
           <div class="container">
             <h2>Piyush Chandra</h2>
             <p class="title">JS</p>
@@ -92,7 +92,7 @@
     </div>
     <div class="column">
         <div class="card">
-          <img src="/images/us/monke.jpg" alt="devansh" style="width:100%">
+          <img src="/static/monke.jpg" alt="devansh" style="width:100%">
           <div class="container">
             <h2>Devansh Chauhan</h2>
             <p class="title">monke</p>
