--- a/templates/professor.html
+++ b/templates/professor.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/stylesheets/professors.css">
+  <link rel="stylesheet" href="/static/css/professors.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
     <h1 style="color: rgb(255, 255, 255);">RESEARCH AREAS</h1>
     <div class="cols">
       <div class="col" ontouchstart="this.classList.toggle('hover');">
-        <a href="/static/csestatic.html" target="blank" class="links">
+        <a href="csestatic.html" target="blank" class="links">
         <div class="card cardcolor" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1610563166150-b34df4f3bcd6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=669&q=80)" >
         <div class="overlay"></div>
           <div class="circle">  
@@ -42,7 +42,7 @@
       </div>
     </a>
       <div class="col" ontouchstart="this.classList.toggle('hover');"> 
-        <a href="/static/eeestatic.html" target="blank" class="links">
+        <a href="eeestatic.html" target="blank" class="links">
         <div class="card cardcolor" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1557855506-3619a44bab73?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80)" >
           <div class="overlay"></div>
             <div class="circle">   
@@ -134,7 +134,7 @@
         </div>
       </a>
       <div class="col" ontouchstart="this.classList.toggle('hover');">
-        <a href="/static/civilstatic.html" target="blank" class="links">
+        <a href="civilstatic.html" target="blank" class="links">
         <div class="card cardcolor" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1556894769-b9a5dab851c0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80)" >
           <div class="overlay"></div>
             <div class="circle">   
@@ -150,7 +150,7 @@
         </div>
       </a>
       <div class="col" ontouchstart="this.classList.toggle('hover');">
-        <a href="/static/mechanicalstatic.html" target="blank" class="links">
+        <a href="mechanicalstatic.html" target="blank" class="links">
         <div class="card cardcolor" style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1600363503477-a8d1d6d57dfc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=708&q=80)" >
           <div class="overlay" style="align-content: center;"></div>
             <div class="circle" style="align-content: center;">   
