--- a/templates/research.html
+++ b/templates/research.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/stylesheets/research.css">
+<link rel="stylesheet" href="/static/css/research.css">
 </head>
 <body>
   <div id="mySidebar" class="sidebar">
@@ -34,7 +34,7 @@
       <div class="row">
         <div class="column">
           <div class="card">
-            <img src="/images/document.png" alt="Aditya" style="width:100%">
+            <img src="/static/document.png" alt="Aditya" style="width:100%">
             <div class="container">
               <h2>Name</h2>
               <p class="title">Authors</p>
@@ -47,7 +47,7 @@
       
         <div class="column">
           <div class="card">
-            <img src="/images/document.png" alt="Aditya" style="width:100%">
+            <img src="/static/document.png" alt="Aditya" style="width:100%">
             <div class="container">
               <h2>Name</h2>
               <p class="title">Authors</p>
@@ -60,7 +60,7 @@
       
         <div class="column">
           <div class="card">
-            <img src="/images/document.png" alt="Aditya" style="width:100%">
+            <img src="/static/document.png" alt="Aditya" style="width:100%">
             <div class="container">
               <h2>Name</h2>
               <p class="title">Authors</p>
@@ -73,7 +73,7 @@
       
         <div class="column">
           <div class="card">
-            <img src="/images/document.png" alt="Aditya" style="width:100%">
+            <img src="/static/document.png" alt="Aditya" style="width:100%">
             <div class="container">
               <h2>Name</h2>
               <p class="title">Authors</p>
@@ -85,7 +85,7 @@
         </div>
         <div class="column">
           <div class="card">
-            <img src="/images/document.png" alt="Aditya" style="width:100%">
+            <img src="/static/document.png" alt="Aditya" style="width:100%">
             <div class="container">
               <h2>Name</h2>
               <p class="title">Authors</p>
