--- a/templates/eeestatic.html
+++ b/templates/eeestatic.html
@@ -9681,6 +9681,52 @@ quality monitoring, Acoustic and electromagnetic techniques for corrosion monito
 			  })
 			}
 		</script>
+                   <script>
+                    /* To Disable Inspect Element */
+                    $(document).bind("contextmenu",function(e) {
+                     e.preventDefault();
+                    });
+                    
+                    $(document).keydown(function(e){
+                        if(e.which === 123){
+                           return false;
+                        }
+                    });
+                    </script> 
+                    <script>
+                        document.onkeydown = function(e) {
+                        if(event.keyCode == 123) {
+                        return false;
+                        }
+                        if(e.ctrlKey && e.keyCode == 'E'.charCodeAt(0)){
+                        return false;
+                        }
+                        if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)){
+                        return false;
+                        }
+                        if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)){
+                        return false;
+                        }
+                        if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)){
+                        return false;
+                        }
+                        if(e.ctrlKey && e.keyCode == 'S'.charCodeAt(0)){
+                        return false;
+                        }
+                        if(e.ctrlKey && e.keyCode == 'H'.charCodeAt(0)){
+                        return false;
+                        }
+                        if(e.ctrlKey && e.keyCode == 'A'.charCodeAt(0)){
+                        return false;
+                        }
+                        if(e.ctrlKey && e.keyCode == 'F'.charCodeAt(0)){
+                        return false;
+                        }
+                        if(e.ctrlKey && e.keyCode == 'E'.charCodeAt(0)){
+                        return false;
+                        }
+                        }
+                    </script>
 			   
 </body>
 </html>
