News added (Not final)

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,7 @@
         <a href="home.html">Home</a>
         <a href="research.html">Research</a>
         <a href="aboutus.html">AboutUs</a>
+        <a href="news.html">News</a>
       </div>
       
       <div id="main">
