--- a/templates/menubar.html
+++ b/templates/menubar.html
@@ -74,6 +74,7 @@ body {
   <a href="home.html">Home</a>
  <a href="research.html">Research</a>
   <a href="aboutus.html">AboutUs</a>
+  <a href="news.html">News</a>
 </div>
 
 <div id="main">
